new addition to javascript file

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,7 +12,7 @@
         }
 
     </style>
-    <script src="js/main.js"></script>
+    <script src="js/andrey.js"></script>
 
 </head>
 <body>
@@ -25,7 +25,7 @@
                         <div class="input-field col s6">
 
                             <i class="material-icons prefix">search</i>
-                            <input placeholder="search..." id="icon_prefix" type="text" class="validate", name="search">
+                            <input placeholder="search..." id="icon_prefix" type="text" class="validate", name="searchName">
 
                         </div>
                         <div class="input-field col s6">
@@ -43,9 +43,9 @@
         <form class=" col s12" id="contact-form">
             <div class="row">
 
-                <!--                <div class="input-field col s1">-->
-                <!--                    <input  type="hidden" class="validate" name="id">-->
-                <!--                </div>-->
+                                <div class="input-field col s1 hide-element">
+                                    <input  class="validate" name="id">
+                                </div>
 
                 <div class="input-field col s2">
 
